# lighthouse-privacy-sidecar

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: holesky-testnet.toml  prometheus.yml  sidecar-1.toml  sidecar-2.toml  sidecar-3.toml  stealth-sidecar.toml
config/grafana/dashboards/: stealth-sidecar.json
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/friend-relay/: Cargo.toml
crates/friend-relay/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/subnet-juggler/: Cargo.toml
crates/subnet-juggler/src/: beacon_network.rs  lib.rs  reth_provider.rs
lighthouse-patch/: attestation_service.patch  holesky-test.sh  stealth_client.rs
scripts/: cleanup.sh  debug-network.sh  demo.sh  generate-activity.sh  kill-sidecar.sh  live-demo.sh  master-demo.sh  metrics-dashboard.sh  quick-demo.sh  setup-nwaku.sh  simple-demo.sh  stop-nwaku.sh  working-demo.sh
src/: lib.rs  main.rs  reth_integration.rs  sidecar.rs
src/tools/: rainbow.rs
