[package]
name = "stealth-metrics"
version = "0.1.0"
edition = "2021"
description = "Prometheus metrics collection for reth-stealth-sidecar"

[dependencies]
# Common crate
stealth-common = { path = "../common" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-prometheus = "0.6"

# HTTP server for metrics endpoint
warp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"