[package]
name = "subnet-juggler"
version = "0.1.0"
edition = "2021"
description = "Dynamic subnet subscription management for Ethereum consensus clients"

[dependencies]
# Common crate
stealth-common = { path = "../common" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client for Lighthouse API
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Random generation
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Networking
libp2p = { version = "0.53", features = ["gossipsub", "tcp", "dns", "websocket", "yamux", "noise", "secp256k1", "identify", "macros", "tokio", "tls"] }
libp2p-identity = "0.2"
multiaddr = "0.18"
sha2 = "0.10"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"